# MWICombatSimulatorTest

./: .gitignore  index.html  package-lock.json  patchNote.json  test.json
combatSimulatorOverhaul/: CMakeLists.txt
combatSimulatorOverhaul/include/: ability.h  buff.h  combat_monster_detail_map.h  combat_simulator.h  combat_trigger_dependency_map.h  combat_unit.h  combat_utilities.h  consumable.h  drops.h  equipment.h  house_room.h  monster.h  player.h  sim_result.h  trigger.h  zone.h
combatSimulatorOverhaul/include/events/: combat_events.h  event.h  event_queue.h
combatSimulatorOverhaul/src/: Ability.cpp  Trigger.cpp  ability.cc  buff.cc  buff.cpp  combat_simulator.cc  combat_trigger_dependency_map.cpp  combat_unit.cc  combat_unit.cpp  combat_utilities.cc  consumable.cc  consumable.cpp  drops.cc  drops.cpp  equipment.cc  equipment.cpp  house_room.cc  house_room.cpp  monster.cc  monster.cpp  player.cc  player.cpp  sim_result.cc  sim_result.cpp  trigger.cc  zone.cc  zone.cpp
combatSimulatorOverhaul/src/events/: event.cc  event_queue.cc
combatSimulatorOverhaul/test/: test.cc  test.json
demo/: jsonUploadDemo1.json  jsonUploadDemo2.json
js/: i18n.js
locales/en/: common.json
locales/zh/: common.json
src/: main.js  multiWorker.js  worker.js
src/combatsimulator/: combatSimulator.js  optimizer.js  simResult.js
